--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
 	"license": "MIT",
 	"main": "dist/pptxgen.js",
 	"dependencies": {
-		"image-size": ">=0.5.1",
 		"jszip": ">=3.1.2"
 	},
 	"devDependencies": {
 		"gulp": "^3.9.1",
 		"gulp-concat": "^2.6.1",
+		"gulp-eslint": "^4.0.0",
 		"gulp-ignore": "^2.0.2",
 		"gulp-sourcemaps": "^2.6.0",
 		"gulp-uglify": "^3.0.0"
