--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,8 @@
             "error",
             "always"
         ],
-        "no-console": 0
+        "no-console": 0,
+        "no-undef": 0,
+        "no-useless-escape": 0
     }
 }
