--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"gulp-eslint": "^4.0.0",
 		"gulp-ignore": "^2.0.2",
 		"gulp-sourcemaps": "^2.6.0",
-		"gulp-uglify": "^3.0.0"
+		"gulp-uglify": "^3.0.0",
+		"gulp-util": "^3.0.8"
 	},
 	"directories": {
 		"example": "examples",
